# CSVMusic

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CSVMusic.spec  My Spotify Library.csv  README.md  Spotify2Media.spec  pyproject.toml
.github/workflows/: release.yml
csvmusic/: __main__.py  app.py  version.py
csvmusic/core/: amazon_music_import.py  apple_music_import.py  browsers.py  csv_import.py  deezer_import.py  downloader.py  import_warnings.py  js_runtime.py  output_folder.py  paths.py  preflight.py  settings.py  spotify_import.py  subprocess_env.py  track_output.py  url_import.py  web_playlist_import.py  youtube_music_import.py  ytmusic_match.py
csvmusic/ui/: main_window.py  workers.py
spotify converter 2 - Copy (3)/: AGENTS.md  CSVMusic.spec  MANIFEST.in  Spotify2Media.spec
spotify converter 2 - Copy (3)/spotify2media/: app.py  download_csv.py  fetch_csv.py  version.py
spotify converter 2 - Copy (3)/spotify2media/core/: csv_import.py  downloader.py  preflight.py  settings.py
spotify2media/: match_csv.py
spotify2media/core/: downloader.py  log.py  preflight.py  settings.py  ytmusic_match.py
spotify2media/ui/: main_window.py  workers.py
tests/core/: test_amazon_music_import.py  test_apple_music_import.py  test_csv_import.py  test_deezer_import.py  test_downloader.py  test_import_warnings.py  test_js_runtime.py  test_output_folder.py  test_packaging.py  test_spotify_import.py  test_subprocess_env.py  test_track_output.py  test_web_playlist_import.py  test_youtube_music_import.py  test_ytmusic_match.py
(+2 files in other folders)
